--- a/publications.html
+++ b/publications.html
@@ -93,9 +93,9 @@
 
 	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky (2016), "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33, <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Report</a></em>.
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard (2015), "Improving Social Networks for Ugandan Farmers," Gender Innovation Lab Policy Brief, World Bank Report Number 103850, <em><a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">Report</a></em>.
+	Vasilaky, Kathryn and Kenneth Leonard (2015), "Improving Social Networks for Ugandan Farmers," Gender Innovation Lab Policy Brief, World Bank Report, <em><a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">Report</a></em>.
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard (2015), "As good as the company they keep? : improving farmers’ social networks ," Gender Innovation Lab Policy Brief, World Bank Report Number 103850, <em><a href="http://documents.worldbank.org/curated/en/603951468197954484/As-good-as-the-company-they-keep-improving-farmers-social-networks">Report</a></em>.
+	Vasilaky, Kathryn and Kenneth Leonard (2015), "As good as the company they keep? : improving farmers’ social networks ," Gender Innovation Lab Policy Brief, World Bank Research Paper 103850, <em><a href="http://documents.worldbank.org/curated/en/603951468197954484/As-good-as-the-company-they-keep-improving-farmers-social-networks">Report</a></em>.
 
 
 
