--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,7 @@
 
 
 	<h1>working papers</h1>
-	Vasilaky, Kathryn (2016), "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>.
+	Vasilaky, Kathryn (2016), "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
 	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood (2016), "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a></em>.
 	<br></br>
