--- a/publications.html
+++ b/publications.html
@@ -83,7 +83,10 @@
 	<br></br>
 	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood (2016), "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a></em>.
 	<br></br>
-	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan (2016), "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab, <em>Working Paper.</em>
+	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan (2016), "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab, <em>Working Paper,</em>and <a href="https://www.socialscienceregistry.org/trials/313">Social Registry Trial 313</a>
+
+	
+
 	<br></br>
 	Vasilaky, Kathryn and Michelle Brock (2015), "Traversing the Landscape of Economic Power." <em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a></em>.
 	<br></br>
