--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<br></br>
 								<a href="field.html">grants, field work</a><br />
 								<br></br>
-								<a href="posts.html">seminars and talks</a><br />
+								<a href="posts.html">workshops and seminars</a><br />
 								<br></br>
 								<a href="cv.html">cv</a><br />
 				 			 </div>
