--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 								<br></br>
 								<a href="field.html">grants, field work</a><br />
 								<br></br>
-								<a href="posts.html">workshops and seminars</a><br />
+								<a href="posts.html">workshops /n and seminars</a><br />
 								<br></br>
 								<a href="cv.html">cv</a><br />
 				 			 </div>
@@ -106,7 +106,7 @@
 						
 
 	<h1>blog posts</h1>
-	
+
 	<a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">World Bank Policy brief</a> on using local social networks in agricultural training.
 	<br></br>
 	<a href="http://iri.columbia.edu/news/video-what-tools-do-honduran-farmers-want-for-climate-risk/">Field video</a><strong></strong> from International Research Institute, Columbia University on Micro Insurance in Honduras.
