--- a/field.html
+++ b/field.html
@@ -73,19 +73,19 @@ PhD Thesis, World Bank DECRG (Markus Goldstein) Funding, $20,000, 2009-2010
 
 <h1>field work</h1>
 
-Dominican Republic (Northern) Group Insurance and Informal Networks. International Research Institute for Climate and Society, Columbia University, January 2014 and September 2016.
+Dominican Republic (Northern) Group Insurance and Informal Networks. International Research Institute for Climate and Society, Columbia University, USAID and Reddom, January 2014 and September 2016.
 <br></br>
 Philippines (Manila) The Effects of Disaster Response on Poverty and Inequality. Earth Institute, Columbia University and World Bank Philippines, September 2015.
 <br></br>
 India (Punjab and Haryana) Water Measurement and Water Savings. Earth Institute, Columbia University and Haryana Irrigation Management Institute, May 2015 – March 2016.
 <br></br>
-Senegal (Koungheul) and Honduras (Tegucigalpa) The Effects of Group Size and Information in Index Insurance. International Research Institute for Climate and Society, Columbia University, May 2015. 
+Senegal (Koungheul) and Honduras (Tegucigalpa) The Effects of Group Size and Information in Index Insurance. International Research Institute for Climate and Society, Columbia University, and WFP May 2015. 
 <br></br>
-Indonesia (Indramayu) Weather Uncertainty and Index Insurance in El Nino Years. International Research Institute for Climate and Society, Columbia University, June 2014. 
+Indonesia (Indramayu) Weather Uncertainty and Index Insurance in El Nino Years. International Research Institute for Climate and Society, Columbia University, and USAID, June 2014. 
 <br></br>
-India (Bihar) Video Based Extension, Self Efficacy, and Perception of Risk. Jameel Poverty Action Lab, Bihar, India May 2014 and May 2015.
+India (Bihar) Video Based Extension, Self Efficacy, and Perception of Risk. Jameel Poverty Action Lab, Bihar, India and Digital Green, May 2014 and May 2015.
 <br></br>
-Ethiopia (Northern) Weather Index Insurance. International Research Institute for Climate and Society, Columbia University, September 2013.
+Ethiopia (Northern) Weather Index Insurance. International Research Institute for Climate and Society, Columbia University, and R4/Harita, September 2013.
 <br></br>
 Uganda (Kampala) Improving Female Adolescent Outcomes. World Bank Development Economics Research Group, BRAC, and Nike Foundation, August-September 2012.  
 <br></br>
