--- a/field.html
+++ b/field.html
@@ -79,7 +79,7 @@ Philippines (Manila) The Effects of Disaster Response on Poverty and Inequality.
 <br></br>
 India (Punjab and Haryana) Water Measurement and Water Savings. Earth Institute, Columbia University and Haryana Irrigation Management Institute, May 2015 – March 2016.
 <br></br>
-Senegal (Koungheul) and Honduras (Tegucigalpa) The Effects of Group Size and Information in Index Insurance. International Research Institute for Climate and Society, Columbia University, and WFP May 2015. 
+Senegal (Koungheul) and Honduras (Tegucigalpa) The Effects of Group Size and Information in Index Insurance. International Research Institute for Climate and Society, Columbia University, and WFP, May 2015. 
 <br></br>
 Indonesia (Indramayu) Weather Uncertainty and Index Insurance in El Nino Years. International Research Institute for Climate and Society, Columbia University, and USAID, June 2014. 
 <br></br>
