--- a/field.html
+++ b/field.html
@@ -66,7 +66,8 @@ Co-Principal Investigator, World Bank, International Finance Corporation, Evalua
 <br></br>
 Principal Investigator, Earth Clinic Grant, Columbia University, SMS Based System for Rainfall Reports $31,000, 2015-2017
 <br></br>
-Principal Investigator, Cross-Cutting Initiative Grant, Columbia University, India Water Depletion Study $32,000, 2014-2016
+Principal Investigator, Cross-Cutting Initiative Grant, Columbia University, Groundwater depletion in Northern India: Prices, Technology, or Group
+Incentives? $32,000, 2014-2016
 <br></br>
 PhD Thesis, World Bank DECRG (Markus Goldstein) Funding, $20,000, 2009-2010
 
