--- a/field.html
+++ b/field.html
@@ -69,7 +69,7 @@ Principal Investigator, Earth Clinic Grant, Columbia University, SMS Based Syste
 Principal Investigator, Cross-Cutting Initiative Grant, Columbia University, Groundwater depletion in Northern India: Prices, Technology, or Group
 Incentives? $32,000, 2014-2016
 <br></br>
-PhD Thesis, World Bank DECRG (Markus Goldstein) Funding, $20,000, 2009-2010
+PhD Thesis, World Bank DECRG (Markus Goldstein) Funding, Weak Ties and Technology Adoption $20,000, 2009-2010
 
 
 <h1>field work</h1>
