--- a/publications.html
+++ b/publications.html
@@ -58,47 +58,46 @@
 <p>
 
 
-	Vasilaky, Kathryn and Kenneth Leonard (2014), "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Rural Uganda	" Forthcoming, April 2018, <em>Economic Development and Cultural Change</em>.
-
+	Vasilaky, Kathryn and Kenneth Leonard, "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Rural Uganda	" Forthcoming, April 2018, <em>Economic Development and Cultural Change</em>.
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood (2016), "Educational Games in Ethiopia,	 Scaling the Demand for Index Insurance," R&R, <em>Journal of Development Studies.</em>
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia,	 Scaling the Demand for Index Insurance," (2016) R&R, <em>Journal of Development Studies.</em>
 	<br></br>
-	Vasilaky, Kathryn (2013), "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
+	Vasilaky, Kathryn, "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em> American Journal of Agricultural Economics, (2013) 95(2): 376-383.</em>
 	<br></br>
 	<h1>under review</h1>
 
-	Vasilaky, Kathryn and Daniel Osgood (2016), "Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance," <em>Under Review.</em>
+	Vasilaky, Kathryn and Daniel Osgood, "Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance," (2016) <em>Under Review.</em>
 	<br></br>
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky (2016), "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures,</a>"<em> Under Review.</em>
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures, (2016)</a>"<em> Under Review.</em>
 
 	<br></br>
-	Vasilaky, Kathryn and Asif Islam (2016), "By Team or By Tournament? Sharing Information Among Female Farmers in Rural Uganda." <em>Under Review.</em>
+	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? Sharing Information Among Female Farmers in Rural Uganda." (2016) <em>Under Review.</em>
 	<br></br>
-	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Women's Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Lab Experiment and a Randomized Control Trial in Uganda</a>,"<em> Under Review</em>.
+	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Women's Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Lab Experiment and a Randomized Control Trial in Uganda</a>," (2016)<em> Under Review</em>.
 	<br></br>
 
 
 	<h1>working papers</h1>
-	Vasilaky, Kathryn (2016), "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
+	Vasilaky, Kathryn, "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857"> (2016), Working Paper</a></em>, and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
-	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood (2016), "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a></em>.
+	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595"> (2016), Working Paper</a></em>.
 	<br></br>
-	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan (2016), "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab, <em>Working Paper,</em> and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
+	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab, (2016) <em>Working Paper,</em> and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
 
 	
 
 	<br></br>
-	Vasilaky, Kathryn and Michelle Brock (2015), "Traversing the Landscape of Economic Power." <em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a></em>.
+	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power." (2015)<em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a></em>.
 	<br></br>
 
 
 	<h1>reports</h1>
 
-	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky (2016), "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33, <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Report</a></em>.
+	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." World Bank Research Paper Vol. 12, No. 33, (2016)<em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Report</a></em>.
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard (2015), "Improving Social Networks for Ugandan Farmers," Gender Innovation Lab Policy Brief, World Bank Report, <em><a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">Report</a></em>.
+	Vasilaky, Kathryn and Kenneth Leonard, "Improving Social Networks for Ugandan Farmers," Gender Innovation Lab Policy Brief, World Bank Report, (2016)<em><a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">Report</a></em>.
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard (2015), "As good as the company they keep? : improving farmers’ social networks ," Gender Innovation Lab Policy Brief, World Bank Research Paper 103850, <em><a href="http://documents.worldbank.org/curated/en/603951468197954484/As-good-as-the-company-they-keep-improving-farmers-social-networks">Report</a></em>.
+	Vasilaky, Kathryn and Kenneth Leonard, "As good as the company they keep? : improving farmers’ social networks ," Gender Innovation Lab Policy Brief, World Bank Research Paper 103850, (2016)<em><a href="http://documents.worldbank.org/curated/en/603951468197954484/As-good-as-the-company-they-keep-improving-farmers-social-networks">Report</a></em>.
 
 
 						
