--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 <p>
 
 
-	Vasilaky, Kathryn and Kenneth Leonard, "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Rural Uganda	" Forthcoming, April 2018, <em>Economic Development and Cultural Change</em>.
+	Vasilaky, Kathryn and Kenneth Leonard, "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Rural Uganda	" Forthcoming, <em>Economic Development and Cultural Change</em>.
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia,	 Scaling the Demand for Index Insurance," (2016) R&R, <em>Journal of Development Studies.</em>
 	<br></br>
