--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
 
 	Vasilaky, Kathryn and Daniel Osgood, "Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance," (2016) <em>Under Review.</em>
 	<br></br>
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures, (2016)</a>"<em> Under Review.</em>
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures, </a>" (2016)<em> Under Review.</em>
 
 	<br></br>
 	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? Sharing Information Among Female Farmers in Rural Uganda." (2016) <em>Under Review.</em>
