--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,7 @@
 	
 
 	<br></br>
-	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power." (2015)<em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a></em>.
+	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power."<em> (2015)<a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a></em>.
 	<br></br>
 
 
