--- a/publications.html
+++ b/publications.html
@@ -78,13 +78,13 @@
 
 
 	<h1>working papers</h1>
-	Vasilaky, Kathryn, "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em><a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">, Working Paper</a> (2016)</em>, and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
+	Vasilaky, Kathryn, "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em><a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">,Working Paper</a> (2016)</em>, and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
 	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
 	<br></br>
-	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab,<em> Working Paper, (2016)</em> and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
+	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab,<em> Working Paper, (2016)</em> and, <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
 	<br></br>
-	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power."<em> (2015) <a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a></em>.
+	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power."<em> <a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a>, (2015)</em>.
 	<br></br>
 
 
