--- a/publications.html
+++ b/publications.html
@@ -60,7 +60,7 @@
 
 	Vasilaky, Kathryn and Kenneth Leonard, "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Rural Uganda	" Forthcoming, <em>Economic Development and Cultural Change</em>.
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia,	 Scaling the Demand for Index Insurance," (2016) R&R, <em>Journal of Development Studies.</em>
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia,	 Scaling the Demand for Index Insurance," R&R, (2016)<em>Journal of Development Studies.</em>
 	<br></br>
 	Vasilaky, Kathryn, "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em> American Journal of Agricultural Economics, (2013) 95(2): 376-383.</em>
 	<br></br>
