--- a/publications.html
+++ b/publications.html
@@ -78,7 +78,7 @@
 
 
 	<h1>working papers</h1>
-	Vasilaky, Kathryn, "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">,Working Paper</a></em>, (2016) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
+	Vasilaky, Kathryn, "An Iterative Tikhonov Approach to the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2016) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
 	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, "Hierarchal Bayesian Estimation of Weather Index Insurance," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
 	<br></br>
