--- a/teaching.html
+++ b/teaching.html
@@ -98,19 +98,19 @@ January 28th, 2016
 <a href="http://www.meetup.com/NYC-PyLadies/events/227647566/">Flask and Git @ StackOverflow</a>
 <br></br>
 February 21st, 2015
-<a href="http://www.meetup.com/nycpython/events/219610398/?a=uc1_te&_af_eid=219610398&_af=event">Networkx at Python Meetup</a>
+<a href="http://www.meetup.com/nycpython/events/219610398/?a=uc1_te&_af_eid=219610398&_af=event">Networkx in Python @ Columbia</a>
 <br></br>
 September 23, 2014
-<a href="http://www.meetup.com/NYC-PyLadies/events/206492062/">Pystan</a>
+<a href="http://www.meetup.com/NYC-PyLadies/events/206492062/">Pystan @ Columbia</a>
 <br></br>
 May 13, 2014
-<a href="http://www.meetup.com/NYC-PyLadies/events/180858362/">Webscraping in Python</a>
+<a href="http://www.meetup.com/NYC-PyLadies/events/180858362/">Webscraping in Python @ Columbia</a>
 <br></br>
 April 28, 2014
-<a href="http://www.meetup.com/NYC-PyLadies/events/171179472/">Python for Beginngers: Part II</a>
+<a href="http://www.meetup.com/NYC-PyLadies/events/171179472/">Python for Beginngers @ Spotify: Part II</a>
 <br></br>
 March 27, 2014
-<a href="http://www.meetup.com/NYC-PyLadies/events/164157682/">Python for Beginners: Part I</a>
+<a href="http://www.meetup.com/NYC-PyLadies/events/164157682/">Python for Beginners @ Tipping Point: Part I</a>
 <br></br>
 
 
