--- a/teaching.html
+++ b/teaching.html
@@ -60,13 +60,13 @@
 						
 						<p>
 
-Columbia University, Earth Institute, Co-Instructor (with Joel Cohen and Jason Wong), SDEV W2300 Challenges of Sustainable Development
+Columbia University, Earth Institute, Co-Instructor (with Joel Cohen and Jason Wong), SDEV W2300-Challenges of Sustainable Development
 
 	<br></br>
 U.S. Naval Academy, Annapolis, MD, Adjunct Professor, Intermediate Statistics, Spring 2011
 	<br></br>
 <h1>guest lectures</h1>
-Columbia University, Statistics Department, Guest Lecturer, W4242 Introduction to Data Science, November 2013 (Instructors: Rachel Schutt and Kayur Patel)
+Columbia University, Statistics Department, Guest Lecturer, W4242-Introduction to Data Science, November 2013 (Instructors: Rachel Schutt and Kayur Patel)
 	<br></br>
 <h1>assistant teaching</h1>
 University of Maryland, College Park, Graduate Teaching Assistant, AREC620-Dynamic Programming and Optimization (Required First Year PhDs), 2008
