--- a/teaching.html
+++ b/teaching.html
@@ -60,7 +60,7 @@
 						
 						<p>
 
-Columbia University, Earth Institute, Co-Instructor (with Joel Cohen and Jason Wong), SDEV W2300-Challenges of Sustainable Development
+Columbia University, Earth Institute, Co-Instructor (with Joel Cohen and Jason Wong), SDEV W2300-Challenges of Sustainable Development, Spring 2016
 
 	<br></br>
 U.S. Naval Academy, Annapolis, MD, Adjunct Professor, Intermediate Statistics, Spring 2011
