--- a/teaching.html
+++ b/teaching.html
@@ -69,9 +69,9 @@ U.S. Naval Academy, Annapolis, MD, Adjunct Professor, Intermediate Statistics, S
 Columbia University, Statistics Department, Guest Lecturer, W4242-Introduction to Data Science, November 2013 (Instructors: Rachel Schutt and Kayur Patel)
 	<br></br>
 <h1>assistant teaching</h1>
-University of Maryland, College Park, Graduate Teaching Assistant, AREC620-Dynamic Programming and Optimization (Required First Year PhDs), 2008
+University of Maryland, College Park, Graduate Teaching Assistant, AREC620-Dynamic Programming and Optimization (Required First Year PhDs), Fall 2008
 	<br></br>
-University of Maryland, College Park, Lab and Grading, ECON200-Microeconomics (Undergraduate Microeconomics), 2007
+University of Maryland, College Park, Lab and Grading, ECON200-Microeconomics (Undergraduate Microeconomics), Spring 2007
 	<br></br>
 <h1>additional teaching</h1>
 
