--- a/teaching.html
+++ b/teaching.html
@@ -75,7 +75,7 @@ University of Maryland, College Park, Lab and Grading, ECON200-Microeconomics (U
 	<br></br>
 <h1>additional teaching</h1>
 
-Statistics.com, An Introduction to Queries and Data Munging in PostgreSQL and R, March 2013
+Statistics.com, An Introduction to Queries and Data Munging in PostgreSQL and R, Fall-Spring 2013
 <br></br>
 Girls Who Code, Instructor, Programming in Python, Summer 2016
 	<br></br>
