--- a/posts.html
+++ b/posts.html
@@ -72,7 +72,7 @@ Speaker, <a href="http://www.meetup.com/Action-Design-NYC/events/226355787/">Tec
 <br></br>
 Speaker, <a href="http://nyc2015.pydata.org/">Pydata</a>, <a href="http://nyc2015.pydata.org/schedule/presentation/117/"> An iterative approach to inverse problems using Python's NumPy</a>, Pydata, New York, New York, 11/11/15
 <br></br>
-Speaker, <a href="https://2015.pygotham.org/talks/207/an-iterative-approach-to/">“An Iterative Approach to Inverse Problems using Python's Numpy,” </a> Py-gotham, New York NY 8/15/15
+Speaker, <a href="https://2015.pygotham.org/talks/207/an-iterative-approach-to/">“An Iterative Approach to Inverse Problems using Python's Numpy,” </a> Pygotham, New York NY 8/15/15
 <br></br>
 Conference Speaker, <a href="https://sites.google.com/a/brown.edu/neudc-2015/home"></a>,<a href="http://editorialexpress.com/conference/NEUDC2015/program/NEUDC2015.html"> Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos</a>, Northest Universities Development Consortium, Providence, Rhode Island, 11/8/15
 <br></br>
