--- a/posts.html
+++ b/posts.html
@@ -62,7 +62,7 @@ Seminar Speaker, <a href="http://steinhardt.nyu.edu/priism/newsandevents/seminar
 <br></br>
 Workshop Speaker, <a href="merltech.org/agenda">From RCT’s to A/B: Choosing Lean Methods for Evaluation, Monitoring, Evaluation, Research and Learning in Development,</a> FHI360, Washington DC, 10/3/16
 <br></br>
-Speaker, <a href="https://2016.pygotham.org/talks/374/it-s-raining-it-s-pouring/"> It's Raining, it's Pouring? A Web and SMS Application in Flask and Twilio to call Farmers </a>, Pygotham, New York, New York, 7/16/16
+Speaker, <a href="https://2016.pygotham.org/talks/374/it-s-raining-it-s-pouring/"> It's Raining, it's Pouring? A Web and SMS Application in Flask and Twilio to call Farmers</a>, Pygotham, New York, New York, 7/16/16
 <br></br>
 Seminar Speaker, Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos, Paris School of Economics, Paris, France, 4/15/16
 <br></br>
@@ -70,7 +70,7 @@ Conference Speaker, <a href="https://editorialexpress.com/cgi-bin/conference/dow
 <br></br>
 Speaker, <a href="http://www.meetup.com/Action-Design-NYC/events/226355787/">Tech, Development Economics, and Experiment Design</a> at <a href="http://reboot.org/">Reboot</a>.org, Reboot, New York, New York, 11/11/15
 <br></br>
-Speaker, <a href="http://nyc2015.pydata.org/">Pydata</a>, <a href="http://nyc2015.pydata.org/schedule/presentation/117/"> An iterative approach to inverse problems using Python's NumPy</a>, Pydata, New York, New York, 11/11/15
+Speaker, <a href="http://nyc2015.pydata.org/schedule/presentation/117/"> An Iterative Approach to Inverse Problems using Python's NumPy</a>, Pydata, New York, New York, 11/11/15
 <br></br>
 Speaker, <a href="https://2015.pygotham.org/talks/207/an-iterative-approach-to/">An Iterative Approach to Inverse Problems using Python's Numpy, </a>Pygotham, New York NY 8/15/15
 <br></br>
@@ -82,7 +82,7 @@ Visitor at Microsoft Research New England, Cambridge, MA, 8/17-21/15
 <br></br>
 Speaker, Networks and Sustainable Development, <a href="http://pintofscience.us/event/earth-ecology-and-environmental-engineering/">Pint of Science</a>, New York NY, 5/18/15
 <br></br>
-Seminar Speaker, As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda, Microsoft Research New York, New Yrok 2015, 4/6/15
+Seminar Speaker, As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda, Microsoft Research New York, New York 2015, 4/6/15
 <br></br>
 Seminar Speaker, As Good as the Networks They Keep? Mechanisms of Information Exchange in Social Networks in Rural Uganda, Paris Environmental and Economics Seminar, Universite Paris 1 Pantheon-Sorbonne, Paris, France, 11/6/14
 <br></br>
