--- a/posts.html
+++ b/posts.html
@@ -106,7 +106,7 @@ Conference Speaker, The Effects of School Quality on Fertility in a Transition E
 <br></br>
 Seminar Speaker, DYNARE: Bayesian Estimation in Matlab, at Federal Reserve Bank of New York NY, NY, 4/2005
 <br></br>
-Seminar Spekaer, Single Economic Space: Implications for Ukraine, (In Ukrainian) presented at Shevchenko Scientific Society NY, NY, January 2004 (<a href="http://www.uncp.soskin.info/diaspora.php?pokaz=23"> link </a>)
+Seminar Spekaer, Single Economic Space: Implications for Ukraine, (In Ukrainian) at Shevchenko Scientific Society NY, NY, January 2004 (<a href="http://www.uncp.soskin.info/diaspora.php?pokaz=23"> link </a>)
 
 
 
