--- a/posts.html
+++ b/posts.html
@@ -104,7 +104,7 @@ Conference Speaker, <a href="http://paa2009.princeton.edu/sessionViewer.aspx?ses
 <br></br>
 Conference Speaker, The Effects of School Quality on Fertility in a Transition Economy, at the Population Association of America (PAA) Detroit, MI, 5/2009
 <br></br>
-Seminar Speaker, DYNARE: Bayesian Estimation in Matlab, at Federal Reserve Bank of New York NY, NY, 4/2005
+Seminar Speaker, DYNARE: Bayesian Estimation in Matlab, at the Federal Reserve Bank of New York NY, NY, 4/2005
 
 
 
