--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,10 @@
 	<br></br>
 	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power,"<em> <a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a>, (2015)</em>.
 	<br></br>
+	Vasilaky, Kathryn and Aurelie Harou, Chia-Ying Lee, and Daniel Osgood, "Evaluating the impact of timely disaster response in the
+	Philippines,"<em>, Working Paper, (2015)</em>.
+		<br></br>
+
 
 
 	<h1>reports</h1>
