--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,7 @@
 	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power,"<em> <a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a>, (2015)</em>.
 	<br></br>
 	Vasilaky, Kathryn and Aurelie Harou, Chia-Ying Lee, and Daniel Osgood, "Evaluating the impact of timely disaster response in the
-	Philippines,"<em>, Working Paper, (2015)</em>.
+	Philippines,"<em> Working Paper, (2015)</em>.
 		<br></br>
 
 
