--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,7 @@
 	<br></br>
 	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab,<em> Working Paper, (2016)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
 	<br></br>
-	Vasilaky, Kathryn and Aurelie Harou, Chia-Ying Lee, and Daniel Osgood, "Evaluating the impact of timely disaster response in the
+	Vasilaky, Kathryn and Aurelie Harou, Chia-Ying Lee, and Daniel Osgood, "Timely Disaster Response in the
 	Philippines," Earth Institute, Columbia University,<em> Working Paper, (2016)</em>.
 	<br></br>
 	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power," European Bank for Reconstruction and Development, and Columbia University, <em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a>, (2015)</em>.
