--- a/posts.html
+++ b/posts.html
@@ -100,8 +100,9 @@ Conference Speaker, <a href="http://paa2009.princeton.edu/sessionViewer.aspx?ses
 <br></br>
 Conference Speaker, The Effects of School Quality on Fertility in a Transition Economy, at the Population Association of America (PAA) Detroit, MI, 5/2009
 <br></br>
-Seminar Speaker, DYNARE: Bayesian Estimation in Matlab, at the Federal Reserve Bank of New York NY, NY, 4/2005
-
+Seminar Speaker, DYNARE: Bayesian Estimation in Matlab, at the Federal Reserve Bank of New York, New York, 4/2005
+<br></br>
+Seminar Speaker, Єдиний економічний простір, at the Shevchenko Scientific Society, New York, New York, 1/2004 
 
 
 
