--- a/posts.html
+++ b/posts.html
@@ -102,7 +102,7 @@ Conference Speaker, The Effects of School Quality on Fertility in a Transition E
 <br></br>
 Seminar Speaker, DYNARE: Bayesian Estimation in Matlab, at the Federal Reserve Bank of New York, New York, 4/2005
 <br></br>
-Seminar Speaker, Єдиний економічний простір, at the Shevchenko Scientific Society, New York, New York, 1/2004 
+Seminar Speaker, Єдиний економічний простір (Singel Economic Space), at the Shevchenko Scientific Society, New York, New York, 1/2004 
 
 
 
