--- a/posts.html
+++ b/posts.html
@@ -72,7 +72,7 @@ Chair of Networks Session, and Presenter, <a href="https://seedec2014.files.word
 <br></br>
 Speaker, <a href="http://www.meetup.com/Action-Design-NYC/events/226355787/">Tech, Development Economics, and Experiment Design</a> at <a href="http://reboot.org/">Reboot</a>.org, Reboot, New York, New York, 11/11/15
 <br></br>
-Speaker, <a href="http://nyc2015.pydata.org/schedule/presentation/117/"> An Iterative Approach to Inverse Problems using Python's NumPy</a>, Pydata, New York, New York, 11/11/15
+Speaker, <a href="hhttp://pydata.org/nyc2015/schedule/presentation/117/index.html"> An Iterative Approach to Inverse Problems using Python's NumPy</a>, Pydata, New York Academy of Medicine, New York, New York, 11/11/15
 <br></br>
 Conference Speaker, <a href="https://sites.google.com/a/brown.edu/neudc-2015/home"></a><a href="http://editorialexpress.com/conference/NEUDC2015/program/NEUDC2015.html"> Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos</a>, Northest Universities Development Consortium, Providence, Rhode Island, 11/8/15
 <br></br>
