--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				
 						My primary background is in development economics utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new technologies, aimed at promoting sustainable agricultural development. My current work builds on this by testing the framing of information with regards to resource management, risk reduction and climate, some via information communication technologies. As a result, my work is interdisciplinary - involving agronomists, engineers and climate modelers. 
 						<br></br>
-						My secondary work is in regularization methods that address the frequently occurring problems in econometrics and big data when the attribute matrix is high dimensional and covariates are correlated. 
+						My secondary work is in regularization methods that address the noisy and highly correlated data or ill-conditioned design matrices. I have developed a generalization of ridge regression (Tikhanov), which can generate estimates with smaller mean squared error than ridge regression, and is relevant to econometrics, image and sound recovery, and big data.  
 
 
 						</p>
