--- a/publications.html
+++ b/publications.html
@@ -118,6 +118,7 @@
 	<br></br>
 	A <a href="http://blogs.worldbank.org/impactevaluations/csae-2015-impact-evaluation-round">World Bank post</a> listing influential RCTs in economic development at Oxford's CSAE conference.
 	<br></br>
+	An <a href = "http://women2.com/stories/2012/10/08/at-patriot-bootcamp-a-commitment-to-social-causes-and-going-beyond-finding-tofu-cupcakes"> interview </a> from when I was a mentor a TechStars Patriot Bootcamp. 
 
 
 
