--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 						I received my PhD in Agricultural and Resource Economics from the University of Maryland, with a focus on development economics and experimental design. I also earned a certificate of Demography from the Maryland Population Research Center. I received my BA in Math and Economics from Columbia University and returned to Columbia University for a postdoc at the Earth Institute (2013-present). 
 <br></br>
 				
-						My primary background is in development economics utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new technologies, aimed at promoting sustainable agricultural development. My current work builds on this by testing the framing of information with regards to resource management, risk reduction and climate, some via information communication technologies that I've built. As a result, my work is interdisciplinary - involving agronomists, engineers and climate modelers. 
+						My primary background is in development economics utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new technologies, aimed at promoting sustainable agricultural development. My current work builds on this by testing the framing of information with regards to resource management, risk reduction and climate, some via information communication technologies that I've built. As a result, my work is interdisciplinary. 
 						<br></br>
 						My secondary work is in regularization methods that address the noisy and highly correlated data or ill-conditioned design matrices. I have developed a generalization of ridge regression (Tikhanov), which can generate estimates with smaller mean squared error than ridge regression, and is relevant to econometrics, image and sound recovery, and big data.  
 						<br></br>
-						In my spare time I'm automating watering my plants with a raspberry pi and some sensors. I was also a professional ballet dancer. 
+						In my spare time I'm automating watering my plants with a raspberry pi and some sensors. I was also a professional ballet dancer and co-founded <a href"groundtruthdata.com"> Ground Truth Data LLC </a>.
 
 						</p>
 						
