--- a/field.html
+++ b/field.html
@@ -98,7 +98,10 @@ Tanzania (Bududa) “Markets for Cotton By-Products.” World Bank Development P
 <br></br>
 Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivity.” World Bank Economics Research Group (dissertation). Supervisor: Markus Goldstein, January 2009-April 2010.
 
-
+<h1>personal field work</h1>
+Willing Workers on Organic Farms, Gaspe, Quebec, Summer 2007
+<br></br>
+Willing Workers on Organic Farms, Sainte Foy de Belves, Dordogne, France Summer 2016
 
 	<br></br>				
 						
