--- a/publications.html
+++ b/publications.html
@@ -119,6 +119,8 @@
 	A <a href="http://blogs.worldbank.org/impactevaluations/csae-2015-impact-evaluation-round">World Bank post</a> listing influential RCTs in economic development at Oxford's CSAE conference.
 	<br></br>
 	A <a href = "http://women2.com/stories/2012/10/08/at-patriot-bootcamp-a-commitment-to-social-causes-and-going-beyond-finding-tofu-cupcakes">Women 2.0 blog post</a> on my thoughts on tech and social causes, from when I was a mentor for TechStars Patriot Bootcamp. 
+	<br></br>
+	A <a href = "http://www.datakind.org/blog/keep-calm-and-collect-your-data/">Datakind blog post</a> I wrote about an amazing social entrepreneur mapping crises, Sara Jayne Terp. 
 
 
 
