--- a/field.html
+++ b/field.html
@@ -60,7 +60,7 @@
 						<p>
 
 
-Co-Principal Investigator, Bill and Melinda Gates Foundation, Multimodal Satellite Rainfall Measurement for Index Insurance, $100,000, 2016-2018
+Co-Principal Investigator, Bill and Melinda Gates Foundation, <a href = "http://gcgh.grandchallenges.org/grant/multimodal-satellite-rainfall-measurement-index-insurance"> Multimodal Satellite Rainfall Measurement for Index Insurance </a>, $100,000, 2016-2018
 <br></br>
 Co-Principal Investigator, World Bank, International Finance Corporation, Evaluating the Timeliness of Disaster Response $200,000, 2015-2017
 <br></br>
