--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<br></br>
 						My secondary work is in regularization methods that address the noisy and highly correlated data or ill-conditioned design matrices. I have developed a generalization of ridge regression (Tikhanov), which can generate estimates with smaller mean squared error than ridge regression, and is relevant to econometrics, image and sound recovery, and big data.  
 						<br></br>
-						In my spare time I'm automating watering my plants with a raspberry pi and some sensors. I was also a professional ballet dancer and am a co-foundeder of <a href"groundtruthdata.com"> Ground Truth Data LLC </a>, which collects more granular weather data using low cost sensors and crowd sourced data. 
+						In my spare time I'm automating watering my plants with a raspberry pi and some sensors. I was also a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>, and am a co-foundeder of <a href"groundtruthdata.com"> Ground Truth Data LLC </a>, which collects more granular weather data using low cost sensors and crowd sourced data. 
 
 						</p>
 						
