--- a/field.html
+++ b/field.html
@@ -99,7 +99,7 @@ Tanzania (Bududa) “Markets for Cotton By-Products.” World Bank Development P
 Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivity.” World Bank Economics Research Group (dissertation). Supervisor: Markus Goldstein, January 2009-April 2010.
 
 <h1>personal field work</h1>
-Gaspe, Quebec, Canada, Willing Workers on Organic Farms, Summer 2007
+Gaspé, Quebec, Canada, Willing Workers on Organic Farms, Summer 2007
 <br></br>
 Sainte Foy de Belves, Dordogne, France, Willing Workers on Organic Farms, Summer 2016
 
