--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<br></br>
 						My secondary work is in regularization methods and the inverse problem that address the noisy and highly correlated data or ill-conditioned design matrices, relevant to econometrics, image and sound recovery, and big data.  
 						<br></br>
-						In my spare time I'm automating watering my plants with a raspberry pi and some sensors. I was also a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>, and am a co-foundeder of<a href"groundtruthdata.com"> Ground Truth Data LLC</a>, which collects more granular weather data using low cost sensors and crowd sourced data. 
+						In my spare time I'm automating watering my plants with a raspberry pi and some sensors, and am a co-foundeder of<a href"groundtruthdata.com"> Ground Truth Data LLC</a>, which collects more granular weather data using low cost sensors and crowd sourced data. I was once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
 
 						</p>
 						
