--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 						<h1>bio</h1>
 						
 						<p>			
-						My primary background is in development economics utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new technologies, aimed at promoting sustainable agricultural development. My current work builds on this by testing the framing of information with regards to resource management, risk reduction and climate, some via information communication technologies that I've built. 
+						My research is applied and computational, and at the intersection of applied social science questions for economic development and data science methods (social network analysis, regularization, ecoometrics, causal inference, bayesian modeling). I have a BA in mathematics and economics and a PhD in applied economics. My research topics are situated in behavioral and development economics, utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new technologies. My current work builds on this by testing the framing of information with regards to resource management, risk reduction and climate, some via web applicationas and information communication technologies that I've built. 
 						<br></br>
 						My secondary work is in regularization methods and the inverse problem that address the noisy and highly correlated data or ill-conditioned design matrices, relevant to econometrics, image and sound recovery, and big data.  
 						<br></br>
-						In my spare time I'm automating watering my plants with a raspberry pi and some sensors. I was once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
+						I believe in making technology, programming,and STEM accessible and free. In this end I co-run Pyladies NYC, have taught for Gilrs Who Code, and regularly host and teach workshops on programming and data science. In my spare time I'm automating watering my plants with a raspberry pi and some sensors. I was once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
 
 						</p>
 						
