--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<br></br>
 						My secondary work is in regularization methods (ridge regression) and the inverse problem that address the noisy and highly correlated data or ill-conditioned design matrices, relevant to econometrics, image and sound recovery, and big data.  
 						<br></br>
-						I believe in making technology and STEM accessible and free. To this end I co-run Pyladies NYC, have taught for Girls Who Code, and regularly host and teach workshops on programming and data science. In my spare time I'm automating watering my plants with a raspberry pi and some sensors. I was also once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
+						I believe in making technology and STEM accessible and free. To this end I co-run Pyladies NYC, have taught for Girls Who Code, and regularly host and teach workshops on programming and data science. In my spare time I amm automating watering my plants with a raspberry pi and sensors. I was also once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
 
 						</p>
 						
