--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<br></br>
 						My secondary work is in regularization methods (ridge regression) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to econometrics, image and sound recovery, and big data.  
 						<br></br>
-						As my research themes suggest, I believe in making technology accessible and free. To this end I co-run and teach for Pyladies NYC, have taught for Girls Who Code, a NGO aimed at closing the gender gap, and regularly host and teach workshops on programming and data science. In my spare time I am automating watering my plants with a raspberry pi and sensors. I was also once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
+						In line with my research, I believe in making stem accessible and free in inclusive learning environments. To this end I co-organize and teach for Pyladies NYC, have taught for Girls Who Code, a NGO aimed at closing the gender gap, and regularly host and teach workshops on programming and data science. In my spare time I am automating watering my plants with a raspberry pi and sensors. I was also once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
 
 						</p>
 						
