--- a/publications.html
+++ b/publications.html
@@ -80,7 +80,7 @@
 	<h1>working papers</h1>
 	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2016) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
-	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, "A Hierarchal Bayesian Model of Weather Prediction with Multiple Tiem Series," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
+	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, "A Hierarchal Bayesian Model of Weather Prediction with Multiple Time Series," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
 	<br></br>
 	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab,<em> Working Paper, (2016)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
 	<br></br>
