changed power title

--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,7 @@
 	Vasilaky, Kathryn and Aurelie Harou, Chia-Ying Lee, and Daniel Osgood, "Measureing the Impact of Timely Disaster Response in the
 	Philippines using Weather Extremes," Earth Institute, Columbia University,<em> Working Paper, (2016)</em>.
 	<br></br>
-	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power," European Bank for Reconstruction and Development, and Columbia University, <em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a>, (2015)</em>.
+	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Statiscal Power," European Bank for Reconstruction and Development, and Columbia University, <em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a>, (2015)</em>.
 
 		<br></br>
 
