updates team paper

--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,7 @@
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field,</a>" (2016),<em> Under Review.</em>
 
 	<br></br>
-	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? Incentives for Sharing Information in an Experimental Game," (2016),<em> Under Review.</em>
+	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href="teams.pdf">Incentives for Sharing Information in an Experimental Game," </a> (2016),<em> Under Review.</em>
 	<br></br>
 	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Female Competitiveness and Sibling Rivalry: Evidence from a Lab Experiment and Randomized Control Trial in Uganda</a>," (2016),<em> Under Review</em>.
 	<br></br>
