--- a/field.html
+++ b/field.html
@@ -92,16 +92,16 @@ Uganda (Kampala) Improving Female Adolescent Outcomes. World Bank Development Ec
 <br></br>
 Malawi (Selemani) Gender and Competition in Matrilocal and Patrilocal Villages. National Science Foundation and University of Maryland, August-September 2011. 
 <br></br> 
-Uganda (Bukedea) “Evaluating the Feasibility of Introducing Malaria Diagnosis in the Private Sector.” Clinton Health Access Initiative and Harvard School of Public Health. Supervisor: Jessica Cohen, June 2009-April 2010.
+Uganda (Bukedea) “Evaluating the Feasibility of Introducing Malaria Diagnosis in the Private Sector.” Clinton Health Access Initiative and Harvard School of Public Health, with Jessica Cohen, June 2009-April 2010.
 <br></br> 
-Tanzania (Bududa) “Markets for Cotton By-Products.” World Bank Development Prospects Group. Supervisor: John Baffes. February 2009.
+Tanzania (Bududa) “Markets for Cotton By-Products.” World Bank Development Prospects Group, with John Baffes. February 2009.
 <br></br>
-Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivity.” World Bank Economics Research Group (dissertation). Supervisor: Markus Goldstein, January 2009-April 2010.
+Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivity.” World Bank Economics Research Group (dissertation), with Markus Goldstein, January 2009-April 2010.
 
 <h1>personal field work</h1>
-Gaspé, Quebec, Canada, Willing Workers on Organic Farms, Summer 2007
+Gaspé, Quebec, Canada, Willing Workers on Organic Farms (serre et potager), Summer 2007
 <br></br>
-Sainte Foy de Belves, Dordogne, France, Willing Workers on Organic Farms, Summer 2016
+Sainte Foy de Belves, Dordogne, France, Willing Workers on Organic Farms (chevre et fromage), Summer 2016
 
 	<br></br>				
 						
