--- a/publications.html
+++ b/publications.html
@@ -62,6 +62,8 @@
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," R&R, <em>Journal of Development Studies</em>, (2016).
 	<br></br>
+	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href="teams.pdf">Incentives for Sharing Information in an Experimental Game," </a> (2016),<em> R&R World Development.</em>
+	<br></br>
 	Vasilaky, Kathryn, "Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?"<em> American Journal of Agricultural Economics, (2013) 95(2): 376-383.</em>
 	<br></br>
 	<h1>under review</h1>
@@ -69,13 +71,9 @@
 	Vasilaky, Kathryn and Daniel Osgood, "Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance," (2016), <em>Under Review.</em>
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field,</a>" (2016),<em> Under Review.</em>
-
-	<br></br>
-	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? <a href="teams.pdf">Incentives for Sharing Information in an Experimental Game," </a> (2016),<em> Under Review.</em>
 	<br></br>
 	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Female Competitiveness and Sibling Rivalry: Evidence from a Lab Experiment and Randomized Control Trial in Uganda</a>," (2016),<em> Under Review</em>.
 	<br></br>
-
 
 	<h1>working papers</h1>
 	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2016) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
