--- a/teaching.html
+++ b/teaching.html
@@ -82,6 +82,12 @@ Girls Who Code, Instructor, Programming in Python, Summer 2016
 Python Workshops: Network Analysis, Webscraping, Data Mining, Neural Networks
 <h1>workshops</h1>
 
+May 21, 2017
+<a href="https://us.pycon.org/2017/schedule/posters/list/">Making Big Data a Little Bit Smaller @ Pycon 2017 </a>
+<br></br>
+March 21, 2017
+<a href="https://us.pycon.org/2017/schedule/presentation/701/">Monitoring Your Plants With Raspberry Pi @ Pycon 2017 </a>
+<br></br>
 March 25, 2017
 <a href="https://www.meetup.com/learn-python-nyc/events/235849052/">Big Ill (conditioned) Data - What to Do? @ 15Five @ Fueled Collective </a>
 <br></br>
