--- a/teaching.html
+++ b/teaching.html
@@ -79,7 +79,7 @@ Statistics.com, An Introduction to Queries and Data Munging in PostgreSQL and R,
 <br></br>
 Girls Who Code, Instructor, Programming in Python, Summer 2016
 <br></br>
-Python Workshops: Network Analysis, Webscraping, Data Mining, Neural Networks
+Python Workshops: Network Analysis, Webscraping & APIs, Data Mining
 <h1>workshops</h1>
 
 May 21, 2017
